--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,6 @@
     "tailwindcss": "^3.0.24"
   },
   "scripts": {
-    "build": "npx tailwindcss -i ./index.css -o ./style.css --watch"
+    "build": "npx tailwindcss -i ./src/index.css -o ./src/style.css --watch"
   }
 }
