--- a/smart-contract/package.json
+++ b/smart-contract/package.json
@@ -2,13 +2,20 @@
   "name": "hardhat-project",
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.5",
+    "@nomiclabs/hardhat-etherscan": "^3.0.3",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "chai": "^4.3.6",
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.4",
     "hardhat": "^2.9.3"
   },
+  "scripts": {
+    "deploy": "npx hardhat run --network rinkeby scripts/deploy.js",
+    "test": "hardhat run test",
+    "verify": "npx hardhat verify --network rinkeby 0xA5BC0F9dc0f907431031fad8ab88eD39712839a8"
+  },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.5.0"
+    "@openzeppelin/contracts": "^4.5.0",
+    "dotenv": "^16.0.0"
   }
 }
