--- a/smart-contract/package.json
+++ b/smart-contract/package.json
@@ -11,8 +11,8 @@
   },
   "scripts": {
     "deploy": "npx hardhat run --network rinkeby scripts/deploy.js",
-    "coverage": "npx hardhat coverage --network rinkeby scripts/deploy.js",
-    "test": "hardhat run test",
+    "coverage": "npx hardhat coverage --network rinkeby",
+    "test": "npx hardhat test",
     "verify": "npx hardhat verify --network rinkeby 0xdF90D84E0409E8c8FCD91c853E4A7d417F88D68E"
   },
   "dependencies": {
